// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`battleActions convertAbility converts PhysicalAttackMultiAndSelfSaAction abilities 1`] = `
Object {
  "action": "PhysicalAttackMultiAndSelfSaAction",
  "alias": null,
  "args": Object {
    "atkType": 2,
    "barrageNum": 3,
    "critical": 0,
    "damageCalculateParamAdjust": 0,
    "damageCalculateParamAdjustConf": Array [],
    "damageFactor": 70,
    "elements": Array [
      102,
      104,
    ],
    "forceHit": 0,
    "ignoresAttackHit": 1,
    "isSameTarget": 1,
    "selfSaAnimationFlag": 1,
    "selfSaId": 257,
    "selfSaOptionsDuration": 0,
  },
  "autoTarget": "Lowest HP% enemy",
  "breaksDamageCap": false,
  "counter": true,
  "effects": "Three single ranged attacks (0,70 each), grants No Air Time 2 to the user",
  "element": "Lightning, Wind",
  "formula": "Physical",
  "id": 30181131,
  "multiplier": 2.1,
  "name": "Cyclone Bolt",
  "nameGl": null,
  "sb": 75,
  "school": "Dragoon",
  "statusAilmentsFactor": 0,
  "statusAilmentsId": 0,
  "target": "Single enemy",
  "time": 1.5,
  "type": "PHY",
}
`;

exports[`battleActions convertAbility converts abilities that remove status ailments 1`] = `
Object {
  "action": "HealHpAndHealSaAction",
  "alias": null,
  "args": Object {
    "damageFactor": 400,
    "factor": 105,
    "ignoresReflection": 0,
    "matkElement": 106,
    "unsetSaBundle": Array [
      2,
    ],
    "unsetSaId": Array [],
  },
  "autoTarget": "Lowest HP% ally",
  "breaksDamageCap": false,
  "counter": true,
  "effects": "Restores HP (105), damages undeads, removes negative effects",
  "element": "Holy",
  "formula": "Magical",
  "id": 30121291,
  "multiplier": 4,
  "name": "Ultra Cure",
  "nameGl": null,
  "sb": 85,
  "school": "White Magic",
  "statusAilmentsFactor": 0,
  "statusAilmentsId": 0,
  "target": "Single",
  "time": 1.5,
  "type": "WHT",
}
`;

exports[`battleActions convertAbility converts simple character abilities 1`] = `
Object {
  "action": "PhysicalAttackMultiAndHealHpByHitDamageAction",
  "alias": null,
  "args": Object {
    "atkType": 1,
    "barrageNum": 4,
    "damageFactor": 75,
    "elements": Array [
      107,
    ],
    "forceHit": 0,
    "healHpFactor": 20,
    "isSameTarget": 1,
  },
  "autoTarget": "Lowest HP% enemy",
  "breaksDamageCap": false,
  "counter": true,
  "effects": "Four single attacks (0,75 each), heals the user for 20% of the damage dealt",
  "element": "Dark",
  "formula": "Physical",
  "id": 30271101,
  "multiplier": 3,
  "name": "Dread Weapon",
  "nameGl": null,
  "sb": 75,
  "school": "Darkness",
  "statusAilmentsFactor": 0,
  "statusAilmentsId": 0,
  "target": "Single enemy",
  "time": 1.65,
  "type": "PHY",
}
`;

exports[`battleActions convertAbility converts soul break jump attacks 1`] = `
Object {
  "action": "PhysicalAttackMultiAction",
  "alias": null,
  "args": Object {
    "atkElement": 102,
    "atkExponentialFactor": 0,
    "atkType": 2,
    "barrageNum": 22,
    "critical": 0,
    "damageCalculateParamAdjust": 0,
    "damageCalculateParamAdjustConf": Array [],
    "damageCalculateTypeByAbility": 0,
    "damageFactor": 36,
    "forceHit": 1,
    "ignoresMirageAndMightyGuard": 0,
    "isFlightAttack": true,
    "isSameTarget": 1,
    "situationalRecalculateDamageHookType": 0,
  },
  "autoTarget": "Lowest HP% enemy",
  "breaksDamageCap": false,
  "counter": false,
  "effects": "Twenty-two single ranged jump attacks (0,36 each)",
  "element": "Lightning",
  "formula": undefined,
  "id": 30544011,
  "multiplier": 7.92,
  "name": "Impulse Drive",
  "nameGl": null,
  "sb": 0,
  "school": "Combat",
  "statusAilmentsFactor": 100,
  "statusAilmentsId": 0,
  "target": "Single enemy",
  "time": 2.5,
  "type": "PHY",
}
`;
